# seclusor

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  cbindgen.toml  deny.toml
.github/: actionlint.yaml
.github/workflows/: ci.yml  go-bindings.yml  release.yml
.goneat/: assess.yaml
bindings/go/seclusor/: README.md  cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  cgo_windows_amd64.go  go.mod  seclusor.go  seclusor_test.go
bindings/go/seclusor/include/: seclusor.h
bindings/typescript/: README.md  index.d.ts  index.js  package.json
bindings/typescript/native/: .gitignore  Cargo.toml
bindings/typescript/native/src/: lib.rs
bindings/typescript/scripts/: build-native.js
bindings/typescript/test/: integration.test.js
config/agentic/roles/: README.md  devlead.yaml  devrev.yaml  entarch.yaml  infoarch.yaml  qa.yaml  secrev.yaml
config/seclusor/v1.0.0/: default.yaml
crates/seclusor/: Cargo.toml  build.rs
crates/seclusor-codec/: Cargo.toml
crates/seclusor-codec/src/: lib.rs
crates/seclusor-core/: Cargo.toml
crates/seclusor-core/src/: constants.rs  crud.rs  env.rs  error.rs  lib.rs  model.rs  validate.rs
crates/seclusor-crypto/: Cargo.toml
crates/seclusor-crypto/src/: error.rs  lib.rs  signing.rs
crates/seclusor-ffi/: Cargo.toml
crates/seclusor-ffi/src/: lib.rs
crates/seclusor-keyring/: Cargo.toml
crates/seclusor-keyring/src/: error.rs  lib.rs
crates/seclusor/src/: main.rs
crates/seclusor/tests/: docs_command.rs  run_command.rs  stdout_purity.rs
crates/seclusor/tests/fixtures/: run-fixture.rs
docs/: embed-manifest.yaml
docs/appnotes/: 01-git-armored-storage.md  02-runtime-deployment-patterns.md  03-special-characters.md
docs/decisions/: ADR-0001-repository-root-detection.md  ADR-0002-age-as-default-encryption-backend.md  ADR-0003-storage-codecs-bundle-and-inline.md  ADR-0004-sqlite-driver-and-replication.md  ADR-0005-api-contract-schema-first.md  ADR-0006-dry-core-cli-server-and-stdout-purity.md  ADR-0007-rust-crate-decomposition.md  ADR-0008-ffi-contract-json-over-ffi-and-opaque-handles.md  ADR-0011-ed25519-signing-in-seclusor-crypto.md  DDR-0001-go-ts-delivery-strategy.md  DDR-0002-ed25519-signing-contract.md  DDR-0003-release-asset-naming-convention.md  README.md  SDR-0001-server-unseal-and-key-management.md  SDR-0002-secret-input-channels-and-cli-arg-policy.md
docs/guides/: cli-reference.md  codecs.md  development.md  identity-and-recipients.md  key-management.md  quickstart.md  security.md
docs/guides/scenarios/: blob-encryption.md  bundle-credentials.md  ci-automation.md  index.md  inline-credentials.md  quick-reference.md  team-recipients.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md
schemas/seclusor/v1.0.0/: README.md  embed-manifest.schema.yaml  secrets.schema.json
scripts/: download-release-assets.sh  export-release-keys.sh  generate-checksums.sh  sign-release-assets.sh  upload-release-assets.sh  verify-public-keys.sh  verify-signatures.sh
scripts/dogfood/: cli-matrix.sh
tests/: README.md
