[package]
name = "seclusor-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
age = { workspace = true }
base64 = { workspace = true }
seclusor-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
