[package]
name = "seclusor-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
seclusor-core = { workspace = true }
seclusor-crypto = { workspace = true }
seclusor-codec = { workspace = true }
seclusor-keyring = { workspace = true }
