[package]
name = "seclusor-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
seclusor-core = { workspace = true }
seclusor-crypto = { workspace = true, features = ["signing"] }
seclusor-codec = { workspace = true }
seclusor-keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
