[package]
name = "seclusor-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
seclusor-core = { workspace = true }
seclusor-crypto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
