[package]
name = "seclusor-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
age = { workspace = true, features = ["armor"] }
seclusor-core = { workspace = true }
seclusor-crypto = { workspace = true }
secrecy = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
