[package]
name = "seclusor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "seclusor"
path = "src/main.rs"

[dependencies]
seclusor-core = { workspace = true }
seclusor-crypto = { workspace = true }
seclusor-codec = { workspace = true }
seclusor-keyring = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
rpassword = "7"
secrecy = "0.10"
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }

[build-dependencies]
glob = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
