[package]
name = "seclusor-ts-napi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", default-features = false, features = ["napi8"] }
napi-derive = "3.5.2"
seclusor-core = { path = "../../../crates/seclusor-core", version = "0.1.0" }
seclusor-crypto = { path = "../../../crates/seclusor-crypto", version = "0.1.0" }
seclusor-codec = { path = "../../../crates/seclusor-codec", version = "0.1.0" }
seclusor-keyring = { path = "../../../crates/seclusor-keyring", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.3.1"

[workspace]
